Update JavaUtil.java
Change for java 11+